tests/errors/misc/comment.c
// this is a test file for checking: 'Comments between expressions'

5 + //hallo
5;